# embedded_gcov

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clean.sh  compile.sh  gcov.py  main.cpp  make_results.sh
libgcov/: CMakeLists.txt
libgcov/include/gcov/: gcov.h
libgcov/src/: gcov.c
libtest/: CMakeLists.txt  test.cpp  test.hpp
libtest/include/test/: test.hpp
